Java 21+ support without the need for --add-opens