@@ -55,9 +55,6 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.0.0-M5</version>
 				<configuration>
-					<argLine>
-						--illegal-access=permit
-					</argLine>
 					<includes>
 						<include>**/Test*.java</include>
 					</includes>
